# deltachat2

./: .prospector.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
deltachat2/: __init__.py  _utils.py  bot.py  client.py  events.py  rpc.py  transport.py  types.py  util.py
examples/: client.py  echobot.py  echobot_advanced.py
