[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deltachat2"
description = "Client library for Delta Chat core JSON-RPC interface"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["deltachat"]
authors = [
  {name = "adbenitez", email = "adb@merlinux.eu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
  "dacite>=1.9.2,<2",
]

[project.urls]
Homepage = "https://github.com/adbenitez/deltachat2"

[project.optional-dependencies]
full = [
    "deltachat-rpc-server>=2.53.0",
]
dev = [
  "deltachat-rpc-server",
  "black",
  "isort",
  "mypy",
  "pylint",
]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools]
packages = ["deltachat2"]

[tool.setuptools.package-data]
deltachat2 = ["py.typed"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
  'build/',
  '/_utils\.py',
  '/types\.py',
]

[tool.pylint.main]
ignore-paths = [
  "build",
]
ignore-patterns = [
  "_version.py",
  "_utils.py",
  "transport.py",
  "rpc.py",
  "types.py",
]
[tool.pylint."messages control"]
disable = [
  "line-too-long",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-function-args",
  "broad-exception-caught",
]